Moveup icon added

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             <li><a href="https://www.flaticon.com/free-icons/email" title="email icons">Email icons created by Uniconlabs - Flaticon</a></li>
             <li><p id="copyright">&copy Adam Wiatros 2021</p></li>
         </ul>
+        <button class="moveup"><img src="images/moveup.png"></button>
     </footer>
 </body>
 </html>
