--- a/index.html
+++ b/index.html
@@ -42,13 +42,30 @@
             <a href=#content><img class="icon" src="images/contact.png" alt="Envelope Icon"></a>
         </ul>
         <ul class="credits">
-            <li><a href="https://www.freepik.com/photos/background">Background photo created by tirachardz - www.freepik.com</a></li>
-            <li><a href="https://www.flaticon.com/free-icons/behance" title="behance icons">Behance icons created by Freepik - Flaticon</a></li>
-            <li><a href="https://www.flaticon.com/free-icons/linkedin" title="linkedin icons">Linkedin icons created by riajulislam - Flaticon</a></li>
-            <li><a href="https://www.flaticon.com/free-icons/dribbble" title="dribbble icons">Dribbble icons created by Grow studio - Flaticon</a></li>
-            <li><a href="https://www.flaticon.com/free-icons/email" title="email icons">Email icons created by Uniconlabs - Flaticon</a></li>
-            <li><p id="copyright">&copy Adam Wiatros 2021</p></li>
+            <li><a href="https://www.freepik.com/photos/background">Background photo created by tirachardz -
+                www.freepik.com</a></li>
+            <li>
+                <p class="break">|</p>
+            </li>
+            <li><a href="https://www.flaticon.com/free-icons/behance" title="behance icons">Behance icons created by
+                    Freepik - Flaticon</a></li>
+            <li>
+                <p class="break">|</p>
+            </li>
+            <li><a href="https://www.flaticon.com/free-icons/linkedin" title="linkedin icons">Linkedin icons created by
+                    riajulislam - Flaticon</a></li>
+            <li>
+                <p class="break">|</p>
+            </li>
+            <li><a href="https://www.flaticon.com/free-icons/dribbble" title="dribbble icons">Dribbble icons created by
+                    Grow studio - Flaticon</a></li>
+            <li>
+                <p class="break">|</p>
+            </li>
+            <li><a href="https://www.flaticon.com/free-icons/email" title="email icons">Email icons created by
+                    Uniconlabs - Flaticon</a></li>
         </ul>
+        <p id="copyright">&copy Adam Wiatros 2021</p>
         <button class="moveup"><img src="images/moveup.png"></button>
     </footer>
 </body>
